# humanoid_robotics_book

./: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  server.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs-book/: sidebars.ts
docs-book/docs/: conclusion.md  development-workflow.md  python-integration.md  robot-modeling.md  ros2-fundamentals.md  spec-driven-development.md
docs-book/src/pages/: index.tsx
history/prompts/001-gazebo-unity-digital-twin/: 0002-Gazebo-Unity-Digital-Twin-Spec.spec.prompt.md  0003-Gazebo-Unity-Digital-Twin-Plan.plan.prompt.md  0004-Gazebo-Unity-Digital-Twin-Tasks.tasks.prompt.md  0005-Gazebo-Unity-Digital-Twin-Implementation.tasks.prompt.md
history/prompts/002-isaac-ai-brain/: 0006-Isaac-AI-Brain-Spec.spec.prompt.md  0007-Isaac-AI-Brain-Plan.plan.prompt.md  0008-Isaac-AI-Brain-Tasks.tasks.prompt.md
history/prompts/004-vla-integration/: 0001-VLA-System-Specification.spec.prompt.md  1-vla-tasks.tasks.prompt.md  2-vla-tasks-generation.tasks.prompt.md  3-vla-system-implementation.red.prompt.md
history/prompts/general/: 0001-Docusaurus-Website-Setup.general.prompt.md
history/prompts/ros2-robotics/: 1-ros2-robotics-module-spec.spec.prompt.md  2-ros2-robotics-module-plan.plan.prompt.md  3-ros2-robotics-module-tasks.tasks.prompt.md  4-ros2-robotics-module-implementation.red.prompt.md
ros2_ws/src/isaac_robot_ai/: CMakeLists.txt
ros2_ws/src/isaac_robot_ai/docs/: sim_to_real_transfer_documentation.md  synthetic_dataset_verification_guide.md
ros2_ws/src/isaac_robot_ai/launch/: synthetic_dataset_generator.launch.py  test_sim_to_real_transfer.launch.py
ros2_ws/src/isaac_robot_ai/nodes/: domain_randomization_node.py  navigation_policy_training_node.py
ros2_ws/src/isaac_robot_ai/scripts/: synthetic_dataset_generator.py
ros2_ws/src/isaac_robot_ai/test/: test_sim_to_real_transfer.py  test_synthetic_dataset_generation.py
ros2_ws/src/isaac_robot_navigation/: CMakeLists.txt
ros2_ws/src/isaac_robot_navigation/docs/: navigation_performance_test_guide.md
ros2_ws/src/isaac_robot_navigation/launch/: navigation.launch.py
ros2_ws/src/isaac_robot_navigation/nodes/: obstacle_avoidance_node.py
ros2_ws/src/isaac_robot_navigation/test/: navigation_performance_test.py
ros2_ws/src/isaac_robot_perception/: CMakeLists.txt
ros2_ws/src/isaac_robot_perception/docs/: accuracy_verification_guide.md  localization_accuracy_test_guide.md  perception_pipeline_test_guide.md  perception_pipeline_test_results.md  performance_testing_guide.md  vslam_complex_factory_test_guide.md  vslam_implementation.md  vslam_mapping_test_guide.md  vslam_performance_validation.md
ros2_ws/src/isaac_robot_perception/launch/: perception_pipeline.launch.py  vslam_pipeline.launch.py
ros2_ws/src/isaac_robot_perception/nodes/: advanced_sensor_fusion_node.py  camera_processing_node.py  feature_tracking_node.py  lidar_processing_node.py  loop_closure_node.py  object_detection_pipeline.py  pose_graph_optimization_node.py  semantic_segmentation_pipeline.py  sensor_fusion_node.py  visual_slam_node.py  vslam_pipeline.py
ros2_ws/src/isaac_robot_perception/test/: accuracy_verification.py  localization_accuracy_test.py  performance_test.py  test_perception_pipeline_with_isaac_sim.py  test_vslam_complex_factory.py  test_vslam_mapping.py  test_vslam_performance_isaac_sim.py  test_vslam_pipeline_with_isaac_sim.py
ros2_ws/src/isaac_simulation/: CMakeLists.txt
ros2_ws/src/isaac_simulation/docs/: advanced_navigation_scenarios_guide.md  isaac_ros_installation.md  isaac_sim_bridge_integration_results.md  isaac_sim_installation.md  isaac_sim_setup_guide.md  photorealistic_rendering_guide.md  physics_configuration_guide.md  robot_spawning_test_guide.md  urdf_to_usd_import_guide.md
ros2_ws/src/isaac_simulation/launch/: isaac_sim_bridge.launch.py  test_isaac_sim_bridge_integration.launch.py
ros2_ws/src/isaac_simulation/nodes/: isaac_sim_bridge_node.py  navigation_bridge_node.py
ros2_ws/src/isaac_simulation/test/: test_isaac_sim_bridge_integration.py  test_robot_spawning.py
ros2_ws/src/isaac_simulation/worlds/: complex_factory.usd  complex_navigation_scenario.usd  humanoid_navigation.usd  humanoid_robot.urdf  humanoid_robot.usd  simple_office.usd
ros2_ws/src/robot_control_nodes/: README.md  setup.py
ros2_ws/src/robot_description/: CMakeLists.txt  README.md
ros2_ws/src/robot_simulation/: CMakeLists.txt  README.md  setup.py
ros2_ws/src/robot_simulation/config/: simulation.rviz
ros2_ws/src/robot_simulation/launch/: simulation.launch.py  simulation_complete.launch.py
ros2_ws/src/robot_simulation/scripts/: simulation_controller.py
ros2_ws/src/robot_simulation/worlds/: empty.world  humanoid_room.world  obstacle_course.world  simple_room.world
ros2_ws/src/robot_visualization/: README.md
ros2_ws/src/vla_execution/: setup.py
ros2_ws/src/vla_msgs/: CMakeLists.txt
ros2_ws/src/vla_msgs/action/: ExecuteAction.action  GraspAction.action
ros2_ws/src/vla_msgs/msg/: Action.msg  ActionPlan.msg  ExecutionStatus.msg  GraspRequest.msg  GraspResult.msg  Object.msg  ObjectQuery.msg  PlanRequest.msg  PlanResponse.msg  RecognitionRequest.msg  RecognitionResult.msg  SceneDescription.msg  Transcription.msg
ros2_ws/src/vla_msgs/srv/: CheckSafety.srv  DetectObjects.srv  GeneratePlan.srv  ProcessVoice.srv
specs/001-gazebo-unity-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  simulation_documentation.md  spec.md  tasks.md
specs/001-ros2-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-isaac-ai-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
website/: README.md  docusaurus.config.ts  sidebars.ts
website/blog/: 2025-01-01-welcome.md
website/docs/: conclusion.md  development-workflow.md  intro.md  python-integration.md  robot-modeling.md  ros2-fundamentals.md  spec-driven-development.md
(+60 files in other folders)
